package pt.isep.nsheets.server.lapr4.blue.s2.core.n1131485.chart.domain;

/**
 *
 * @author PedroEmanuelCoelho 1131485@isep.ipp.pt
 * 
 * Just a simple enum to contain all CharTypes
 */
public enum ChartType{
    
    BARCHART, PIECHART;
}
