@startuml  dm.png
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

PieChart --> "1" ChartType : has
BarChart --> "1" ChartType : has
ChartFactory "1" --> "1" Chart : has
ChartDTO "1" --> "1" Chart : can build
Chart "1" --> "1" ChartDTO : can build

class ChartType <<ValueObject>>{

    BARCHART
    PIECHART
}

class ChartFactory{

    - Chart

    + buildNewChart(ChartType, String, boolean)

}

interface Chart{

    {abstract} display()

    {abstract} toDTO(Chart)

    {abstract} fromDTO(ChartDTO)
}

class BarChart implements Chart{

    + toDTO(Chart)

    + fromDTO(ChartDTO)

    + display()
}

class PieChart implements Chart {

    + toDTO(Chart)

    + fromDTO(ChartDTO)

    + display()
}

class ChartDTO <<E,yellow>> {


}

@enduml